Fix up the genomic search, add better error messages
